@@ -1,5 +1,5 @@
-AC_INIT(libenet, 1-8-2008)
-AM_INIT_AUTOMAKE(libenet.a, 1-8-2008)
+AC_INIT(libenet, 9-15-2008)
+AM_INIT_AUTOMAKE(libenet.a, 9-15-2008)
 
 AC_PROG_CC
 AC_PROG_RANLIB
