@@ -1,3 +1,9 @@
+ENet - (current):
+
+* added thin wrapper around select() for portable usage
+* added ENET_SOCKOPT_REUSEADDR socket option
+* factored enet_socket_bind()/enet_socket_listen() out of enet_socket_create()
+
 ENet 1.2 (February 12, 2008):
 
 * fixed bug in VERIFY_CONNECT acknowledgement that could cause connect
